--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
   <title>Glory Greatest</title>
-    <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -19,11 +19,11 @@
     </a>
     <h1 style="font-size: 64px; line-height: 64px;">PRESS RELEASE GENERATOR</h1>
   </div>
-  
+
   <div class="mainContent">
     <div class="content">
-  <div class="container">
-    <textarea id="releaseInput" placeholder="1993 AUGUST 8
+      <div class="container">
+        <textarea id="releaseInput" placeholder="1993 AUGUST 8
 
 MINISTRY OF SCHEDULED CELEBRATION
 PARADIZNA, ARSTOTZKA
@@ -44,30 +44,30 @@ Several ministries have contributed significant resources to effect the celebrat
 
 ---- The Ministry of Giving has secured a donation of $100,000 to support the International Rescue Committee in their mission to help those affected by conflict and disaster.
 
-Finally, the Ministry of Gratitude Assignment would like to extend great thanks to all 5 million inspectors that have dutifully served at Grestin Border Checkpoint over the last 10 years. Your unwavering eye and deft skill are testaments to the vast resourcefulness of the Arstotzkan spirit." rows="20" cols="50"></textarea>
-  <label for="toggleFooterText">Show default footer text:</label>
-  <input type="checkbox" id="toggleFooterText" checked>
-      <div id="releaseOutput" class="release">
-    <img id="releaseHeader" src="img/Release-Header.png">
-    <pre id="mainText"> ... default text ... </pre>
-    <pre id="approvalText" style="display: none;"> 
-Glory to Arstotzka.
+Finally, the Ministry of Gratitude Assignment would like to extend great thanks to all 5 million inspectors that have dutifully served at Grestin Border Checkpoint over the last 10 years. Your unwavering eye and deft skill are testaments to the vast resourcefulness of the Arstotzkan spirit."></textarea>
+        <label for="toggleFooterText">Show default footer text:</label>
+        <input type="checkbox" id="toggleFooterText" checked>
+        <div id="releaseOutput" class="release">
+          <img id="releaseHeader" src="img/Release-Header.png">
+          <pre id="mainText"> ... default text ... </pre>
+          <pre id="approvalText" style="display: none;"> 
+            Glory to Arstotzka.
 
-APPROVED FOR RELEASE BY THE MINISTRY OF MEDIA
-APPROVED FOR RELEASE BY THE MINISTRY OF COMMUNICATION
-APPROVED FOR RELEASE BY THE MINISTRY OF MEDIA &amp; COMMUNICATION
-APPROVED FOR RELEASE BY THE MINISTRY OF ADMISSION
-APPROVED FOR RELEASE BY THE MINISTRY OF SCHEDULED CELEBRATION
-APPROVED FOR RELEASE BY THE MINISTRY OF DISCOUNTS &amp; FLASH SALES
-APPROVED FOR RELEASE BY THE MINISTRY OF FABRIC
-APPROVED FOR RELEASE BY THE MINISTRY OF MELODY
-APPROVED FOR RELEASE BY THE MINISTRY OF POCKET ELECTRONICS
-APPROVED FOR RELEASE BY THE MINISTRY OF GRATITUDE ASSIGNMENT
-APPROVED FOR RELEASE WITH EDITS BY THE MINISTRY OF SECURITY
-APPROVED FOR RELEASE WITH EDITS BY THE MINISTRY OF INFORMATION
-    </pre>
-    <img id="releaseFooter" src="img/Release-Footer.png" style="display: none;">
-  </div>
+            APPROVED FOR RELEASE BY THE MINISTRY OF MEDIA
+            APPROVED FOR RELEASE BY THE MINISTRY OF COMMUNICATION
+            APPROVED FOR RELEASE BY THE MINISTRY OF MEDIA &amp; COMMUNICATION
+            APPROVED FOR RELEASE BY THE MINISTRY OF ADMISSION
+            APPROVED FOR RELEASE BY THE MINISTRY OF SCHEDULED CELEBRATION
+            APPROVED FOR RELEASE BY THE MINISTRY OF DISCOUNTS &amp; FLASH SALES
+            APPROVED FOR RELEASE BY THE MINISTRY OF FABRIC
+            APPROVED FOR RELEASE BY THE MINISTRY OF MELODY
+            APPROVED FOR RELEASE BY THE MINISTRY OF POCKET ELECTRONICS
+            APPROVED FOR RELEASE BY THE MINISTRY OF GRATITUDE ASSIGNMENT
+            APPROVED FOR RELEASE WITH EDITS BY THE MINISTRY OF SECURITY
+            APPROVED FOR RELEASE WITH EDITS BY THE MINISTRY OF INFORMATION
+          </pre>
+          <img id="releaseFooter" src="img/Release-Footer.png" style="display: none;">
+        </div>
         <div class="downloadButtonContainer">
           <button id="download" onclick="downloadRelease()" style="background-image: url('img/downloadPressed.png');"></button>
         </div>
