--- a/src/index.html
+++ b/src/index.html
@@ -64,8 +64,7 @@ APPROVED FOR RELEASE BY THE MINISTRY OF MELODY
 APPROVED FOR RELEASE BY THE MINISTRY OF POCKET ELECTRONICS
 APPROVED FOR RELEASE BY THE MINISTRY OF GRATITUDE ASSIGNMENT
 APPROVED FOR RELEASE WITH EDITS BY THE MINISTRY OF SECURITY
-APPROVED FOR RELEASE WITH EDITS BY THE MINISTRY OF INFORMATION
-          </pre>
+APPROVED FOR RELEASE WITH EDITS BY THE MINISTRY OF INFORMATION</pre>
           <img id="releaseFooter" src="img/Release-Footer.png" style="display: none;">
         </div>
         <div class="downloadButtonContainer">
