--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="https://papersplea.se/favicons/favicon-196x196.png">
+  <meta name="theme-color" content="#896a67">
+<meta property="og:title" content="Glory Greatest" />
+<meta property="og:type" content="website" />
+<meta property="og:description" content="Generate official press releases in the style of &quot;Papers, Please,&quot; a game by Lucas Pope. This web application allows you to create, modify, and present press releases like those from the fictional world of Arstotzka."/>
+  <link rel="icon" type="image/png" href="img/logo.ico">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
   <title>Glory Greatest</title>
