--- a/src/index.html
+++ b/src/index.html
@@ -54,8 +54,7 @@ Finally, the Ministry of Gratitude Assignment would like to extend great thanks 
         <div id="releaseOutput" class="release">
           <img id="releaseHeader" src="img/Release-Header.png">
           <pre id="mainText"> ... default text ... </pre>
-          <pre id="approvalText" style="display: none;"> 
-Glory to Arstotzka.
+          <pre id="approvalText" style="display: none;">Glory to Arstotzka.
 
 APPROVED FOR RELEASE BY THE MINISTRY OF MEDIA
 APPROVED FOR RELEASE BY THE MINISTRY OF COMMUNICATION
